** Fixed overflow issue with Forge images

--- a/webapp/src/main/webapp/resources/novus/scss/forge-images.scss
+++ b/webapp/src/main/webapp/resources/novus/scss/forge-images.scss
@@ -2,6 +2,8 @@
 @import "compass";
 @import "styles";
 
+$border-width: 3px;
+
 h2 {
   @include header-2;
   color: $title-color;
@@ -20,5 +22,6 @@ h2 {
 .forge-image-container img {
   vertical-align: top;
   margin: 20px;
-  border: 3px solid #000;
+  border: $border-width solid #000;
+  max-width: 920px - ($border-width * 2);   
 }
